--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.14.0",
+    "node-fetch": "^2.7.0",
     "uuid": "^11.1.0"
   }
 }
