--- a/react-movies/package.json
+++ b/react-movies/package.json
@@ -14,14 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@tanstack/react-query": "^5.77.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-router": "^7.3.0"
+    "react-router": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tanstack/react-query-devtools": "^5.77.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
